<resources>
    <string name="app_name">Manage Store Clothes</string>
    <string name="splash_content">Quản Lý Cửa Hàng</string>
    <string name="login">Đăng Nhập</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_pass">Quên mật khẩu ?</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="home_quanao">Nhập quần áo</string>
    <string name="home_kho">Kho</string>
    <string name="home_banchay">Bán chạy</string>
    <string name="home_thongke">Thống kê</string>
    <string name="title_activity_add_clothes">Nhập quần áo</string>
    <string name="title_activity_quan_ly_kho">Quản Lý Kho</string>
    <string name="title_activity_chi_tiet_kho">Chi Tiết Kho</string>
    <string name="title_activity_hang_ban_chay">Hàng Bán Chạy</string>
    <string name="title_activity_thong_ke">Thống Kê</string>
</resources>
