<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_nhapquanao"
            android:icon="@drawable/quanao"
            android:title="@string/home_quanao" />
    </group>


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_kho"
            android:icon="@drawable/kho"
            android:title="@string/home_kho" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_banchay"
            android:icon="@drawable/banchay"
            android:title="@string/home_banchay" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_thongke"
            android:icon="@drawable/thongke"
            android:title="@string/home_thongke" />
    </group>

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="@string/menu_share" />-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="@string/menu_send" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>
